--- a/src/main/resources/assets/ae2things/lang/en_us.json
+++ b/src/main/resources/assets/ae2things/lang/en_us.json
@@ -5,5 +5,6 @@
   "item.ae2things.disk_drive_64k": "64k ME Item DISK Drive",
   "item.ae2things.disk_housing": "ME Item DISK Housing",
   "block.ae2things.advanced_inscriber": "Advanced Inscriber",
-  "block.ae2things.crystal_growth": "Crystal Growth Chamber"
+  "block.ae2things.crystal_growth": "Crystal Growth Chamber",
+  "itemGroup.ae2things.item_group": "AE2Things"
 }
